# nerf-pytorch

./: .gitignore  pyproject.toml  setup.py
nerf_pytorch/: load_LINEMOD.py  load_blender.py  load_deepvoxels.py  nerf_utils.py  run_nerf.py  run_nerf_helpers.py  utils.py
nerf_pytorch/configs/: lego.txt
nerf_pytorch/sampling_networks/: baseline_sampler.py  utils.py
nerf_pytorch/trainers/: Blender.py  LLF.py  Linemod.py  Trainer.py  __init__.py  deepvoxels.py
